Update generated documentation 0.0.2

--- a/references/yaaf-xmpp-messagearchivemanager-sql-mysql-mysqlarchivemanagerdbcontext.html
+++ b/references/yaaf-xmpp-messagearchivemanager-sql-mysql-mysqlarchivemanagerdbcontext.html
@@ -53,11 +53,49 @@
       <tr>
         <td class="member-name">
 
-          <code onmouseout="hideTip(event, '66', 66)" onmouseover="showTip(event, '66', 66)">
-            new()
+          <code onmouseout="hideTip(event, '72', 72)" onmouseover="showTip(event, '72', 72)">
+            new(nameOrConnection, doInit)
           </code>
-          <div class="tip" id="66">
-            <strong>Signature:</strong> unit -&gt; unit<br />
+          <div class="tip" id="72">
+            <strong>Signature:</strong> (nameOrConnection:string * doInit:bool) -&gt; unit<br />
+                      </div>
+        </td>
+        <td class="xmldoc">
+          
+        </td>
+      </tr>
+    </tbody>
+  </table>
+  <h3>Instance members</h3>
+  <table class="table table-bordered member-list">
+    <thead>
+      <tr><td>Instance member</td><td>Description</td></tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td class="member-name">
+
+          <code onmouseout="hideTip(event, '73', 73)" onmouseover="showTip(event, '73', 73)">
+            FixScript(s)
+          </code>
+          <div class="tip" id="73">
+            <strong>Signature:</strong> s:string -&gt; string<br />
+              <strong>Modifiers:</strong> abstract<br />
+                      </div>
+        </td>
+        <td class="xmldoc">
+          
+        </td>
+      </tr>
+      <tr>
+        <td class="member-name">
+
+          <code onmouseout="hideTip(event, '74', 74)" onmouseover="showTip(event, '74', 74)">
+            GetMigrator()
+          </code>
+          <div class="tip" id="74">
+            <strong>Signature:</strong> unit -&gt; DbMigrator<br />
+              <strong>Modifiers:</strong> abstract<br />
                       </div>
         </td>
         <td class="xmldoc">
