--- a/ReleaseNotes.html
+++ b/ReleaseNotes.html
@@ -35,6 +35,13 @@
       <div class="row">
         <div class="span9" id="main">
           
+<h3><a name="0-0-2" class="anchor" href="#0-0-2">0.0.2</a></h3>
+
+<ul>
+<li>Remove previous migrations to work around MySQL Connector bug</li>
+<li>Update Yaaf.Database</li>
+</ul>
+
 <h3><a name="0-0-1" class="anchor" href="#0-0-1">0.0.1</a></h3>
 
 <ul>
