--- a/references/index.html
+++ b/references/index.html
@@ -66,7 +66,7 @@
         </tr>
         <tr>
           <td class="type-name">
-            <a href="yaaf-xmpp-messagearchivemanager-sql-messagearchivingdbcontext.html">MessageArchivingDbContext</a>
+            <a href="yaaf-xmpp-messagearchivemanager-sql-mssqlmessagearchivingdbcontext.html">MSSQLMessageArchivingDbContext</a>
           </td>
           <td class="xmldoc"></td>
         </tr>
@@ -90,6 +90,18 @@
         <tr>
           <td class="type-name">
             <a href="yaaf-xmpp-messagearchivemanager-sql-migrations-initial.html">Initial</a>
+          </td>
+          <td class="xmldoc"></td>
+        </tr>
+        <tr>
+          <td class="type-name">
+            <a href="yaaf-xmpp-messagearchivemanager-sql-migrations-migrationscontextfactory.html">MigrationsContextFactory</a>
+          </td>
+          <td class="xmldoc"></td>
+        </tr>
+        <tr>
+          <td class="type-name">
+            <a href="yaaf-xmpp-messagearchivemanager-sql-migrations-_0_0_1.html">_0_0_1</a>
           </td>
           <td class="xmldoc"></td>
         </tr>
@@ -200,7 +212,19 @@
     <tbody>
         <tr>
           <td class="type-name">
-            <a href="yaaf-xmpp-messagearchivemanager-sql-mysql-migrations-initial.html">Initial</a>
+            <a href="yaaf-xmpp-messagearchivemanager-sql-mysql-migrations-configuration.html">Configuration</a>
+          </td>
+          <td class="xmldoc"></td>
+        </tr>
+        <tr>
+          <td class="type-name">
+            <a href="yaaf-xmpp-messagearchivemanager-sql-mysql-migrations-migrationscontextfactory.html">MigrationsContextFactory</a>
+          </td>
+          <td class="xmldoc"></td>
+        </tr>
+        <tr>
+          <td class="type-name">
+            <a href="yaaf-xmpp-messagearchivemanager-sql-mysql-migrations-_0_0_1.html">_0_0_1</a>
           </td>
           <td class="xmldoc"></td>
         </tr>
