--- a/references/yaaf-xmpp-messagearchivemanager-sql-migrations-_0_0_1.html
+++ b/references/yaaf-xmpp-messagearchivemanager-sql-migrations-_0_0_1.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Initial - Yaaf.MessageArchiveManager.SQL</title>
+    <title>_0_0_1 - Yaaf.MessageArchiveManager.SQL</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="Matthias Dittrich">
@@ -38,9 +38,9 @@
 
 
 
-<h1>Initial </h1>
+<h1>_0_0_1 </h1>
 <div class="xmldoc">
-    Defined in Yaaf.MessageArchiveManager.MySQL.dll.
+    Defined in Yaaf.MessageArchiveManager.SQL.dll.
 </div>
 <div class="xmldoc">
 </div>
@@ -53,10 +53,10 @@
       <tr>
         <td class="member-name">
 
-          <code onmouseout="hideTip(event, '67', 67)" onmouseover="showTip(event, '67', 67)">
+          <code onmouseout="hideTip(event, '16', 16)" onmouseover="showTip(event, '16', 16)">
             new()
           </code>
-          <div class="tip" id="67">
+          <div class="tip" id="16">
             <strong>Signature:</strong> unit -&gt; unit<br />
                       </div>
         </td>
@@ -75,10 +75,10 @@
       <tr>
         <td class="member-name">
 
-          <code onmouseout="hideTip(event, '68', 68)" onmouseover="showTip(event, '68', 68)">
+          <code onmouseout="hideTip(event, '17', 17)" onmouseover="showTip(event, '17', 17)">
             Down()
           </code>
-          <div class="tip" id="68">
+          <div class="tip" id="17">
             <strong>Signature:</strong> unit -&gt; unit<br />
               <strong>Modifiers:</strong> abstract<br />
                       </div>
@@ -90,10 +90,10 @@
       <tr>
         <td class="member-name">
 
-          <code onmouseout="hideTip(event, '69', 69)" onmouseover="showTip(event, '69', 69)">
+          <code onmouseout="hideTip(event, '18', 18)" onmouseover="showTip(event, '18', 18)">
             Up()
           </code>
-          <div class="tip" id="69">
+          <div class="tip" id="18">
             <strong>Signature:</strong> unit -&gt; unit<br />
               <strong>Modifiers:</strong> abstract<br />
                       </div>
