--- a/references/yaaf-xmpp-messagearchivemanager-sql-mysql-migrations-configuration.html
+++ b/references/yaaf-xmpp-messagearchivemanager-sql-mysql-migrations-configuration.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>MessageArchivingDbContext - Yaaf.MessageArchiveManager.SQL</title>
+    <title>Configuration - Yaaf.MessageArchiveManager.SQL</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="Matthias Dittrich">
@@ -38,9 +38,9 @@
 
 
 
-<h1>MessageArchivingDbContext </h1>
+<h1>Configuration </h1>
 <div class="xmldoc">
-    Defined in Yaaf.MessageArchiveManager.SQL.dll.
+    Defined in Yaaf.MessageArchiveManager.MySQL.dll.
 </div>
 <div class="xmldoc">
 </div>
@@ -53,10 +53,10 @@
       <tr>
         <td class="member-name">
 
-          <code onmouseout="hideTip(event, '7', 7)" onmouseover="showTip(event, '7', 7)">
+          <code onmouseout="hideTip(event, '75', 75)" onmouseover="showTip(event, '75', 75)">
             new()
           </code>
-          <div class="tip" id="7">
+          <div class="tip" id="75">
             <strong>Signature:</strong> unit -&gt; unit<br />
                       </div>
         </td>
